html file created

--- a/output/team.html
+++ b/output/team.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"crossorigin="anonymous">
-        <link href="./assets/css/style.css" rel="stylsheet"> 
+        <link rel="stylsheet" href="./assets/css/style.css">
         <title>Team Profile</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"crossorigin="anonymous">
     </head>
@@ -16,51 +16,51 @@
         </nav>
         <div class="container">
             <div class="row"><div class="col-6">
+        <div class="card mx-auto mb-3" style="width: 14rem">
+        <h5 class="card-header">Melaku<br /><br />Manager</h5>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">ID: 111</li>
+            <li class="list-group-item">Email Address: melaku@gmail.com</li>
+            <li class="list-group-item">Office Phone: 110</li>
+        </ul>
+        </div>
+    </div><div class="col-6">
             <div class="card mx-auto mb-3" style="width: 14rem">
-            <h5 class="card-header"><br /><br />Engineer</h5>
+            <h5 class="card-header">Mamo<br /><br />Engineer</h5>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: </li>
-                <li class="list-group-item">Email Address: ddd</li>
-                <li class="list-group-item">GitHub: ff</li>
+                <li class="list-group-item">ID: 222</li>
+                <li class="list-group-item">Email Address: mamo@yahoo.com</li>
+                <li class="list-group-item">GitHub: mamo</li>
             </ul>
             </div>
         </div><div class="col-6">
             <div class="card mx-auto mb-3" style="width: 14rem">
-            <h5 class="card-header">f<br /><br />Engineer</h5>
+            <h5 class="card-header">mery<br /><br />Engineer</h5>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: </li>
-                <li class="list-group-item">Email Address: ffff</li>
-                <li class="list-group-item">GitHub: f</li>
+                <li class="list-group-item">ID: 333</li>
+                <li class="list-group-item">Email Address: mery@yahoo.com</li>
+                <li class="list-group-item">GitHub: mery</li>
             </ul>
             </div>
         </div><div class="col-6">
             <div class="card mx-auto mb-3" style="width: 14rem">
-            <h5 class="card-header">f<br /><br />Engineer</h5>
+            <h5 class="card-header">dere<br /><br />Engineer</h5>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: </li>
-                <li class="list-group-item">Email Address: f</li>
-                <li class="list-group-item">GitHub: f</li>
+                <li class="list-group-item">ID: 444</li>
+                <li class="list-group-item">Email Address: dere@gmail.com</li>
+                <li class="list-group-item">GitHub: dere</li>
             </ul>
             </div>
         </div><div class="col-6">
-            <div class="card mx-auto mb-3" style="width: 14rem">
-            <h5 class="card-header">f<br /><br />Engineer</h5>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: f</li>
-                <li class="list-group-item">Email Address: ff</li>
-                <li class="list-group-item">GitHub: </li>
-            </ul>
-            </div>
-        </div><div class="col-6">
-            <div class="card mx-auto mb-3" style="width: 14rem">
-            <h5 class="card-header"><br /><br />Engineer</h5>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: f</li>
-                <li class="list-group-item">Email Address: </li>
-                <li class="list-group-item">GitHub: ff</li>
-            </ul>
-            </div>
-        </div> </div>
+        <div class="card mx-auto mb-3" style="width: 14rem">
+        <h5 class="card-header">beke<br /><br />Intern</h5>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">ID: 555</li>
+            <li class="list-group-item">Email Address: beke</li>
+            <li class="list-group-item">School: VCU</li>
+        </ul>
+        </div>
+    </div> </div>
     </div>
     
 </body>
